--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <h1>LyricsSearch</h1>
 
-        <form>
+        <form id="form">
             <input type="text" id="search" placeholder="Enter artist or song name...">
             <button>Search</button>
         </form>
